css/main.css
/*v2.0 | 20110126
License: none (public domain)
*/
 
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
margin: 0;
padding: 0;
border: 0;
font-size: 100%;
font: inherit;
vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
display: block;
}
body {
line-height: 1;
}
ol, ul {
list-style: none;
}
blockquote, q {
quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
content: '';
content: none;
}
table {
border-collapse: collapse;
border-spacing: 0;
}




.fR {
  float: right;
    padding-left: 5px;
    text-decoration: none;
    color: gray;
  display: block;
  }
  .fL {
    float: left;
    display:block;
    color: gray;
    text-decoration: none;
    padding-right: 5px;
    }
    
  .testingit{
  display:block;
  line-height: 24px;
  outline: none;
  }
  
  .center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 30px;
  width: 50%;
  }
  .img-container {
    position: relative;
    text-align: center;
    padding-top: 150px;
  }
    
  .bB {
   position: relative;
   margin: 0px;
  }
  
  .search {
      display: block;
      position: relative;
      margin-top: 22px;
  }

